# adhdlife

./: .gitignore  .npmrc  ADHD_Life_App_PRD.docx  CLAUDE.md  HANDOFF.md  README.md  REDESIGN-BRIEF.md  RELEASE.md  RELEASE_CHECKLIST.md  package.json  tsconfig.base.json  turbo.json
.claude/skills/: pr.md
.design-handoff/: README.md  dashboard.html
.github/workflows/: build-and-release.yml
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/scripts/: reset-db.mjs
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_next_week_priorities.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: category-colors.ts  db.ts  motion.ts  theme.ts  utils.ts
apps/desktop/src/pages/: dashboard.tsx  habits.tsx  inbox.tsx  pomodoro.tsx  reading.tsx  (+4 more)
apps/mobile/: app.config.ts  eas.json  metro.config.js  package.json
apps/mobile/app/: _layout.tsx  settings.tsx
apps/mobile/components/: add-book-sheet.tsx  book-detail-sheet.tsx  dot-grid.tsx  drawer-content.tsx  empty-state.tsx  fab.tsx  habit-circle.tsx  quick-add-sheet.tsx  screen-header.tsx  section-label.tsx  sheet.tsx  swipeable-task-row.tsx  task-row.tsx  undo-toast.tsx
apps/mobile/lib/: db.ts  theme.ts  use-theme.tsx  utils.ts
data/: README.md
design/: app-components.jsx  dashboard-cards.jsx  dashboard.html  pages.jsx
scripts/: build.js
(+52 files in other folders)
