[package]
name    = "adhd-life"
version = "0.2.2"
edition = "2021"

[lib]
name = "adhd_life_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2",      features = ["devtools"] }
tauri-plugin-sql  = { version = "2",      features = ["sqlite"] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-notification = { version = "2" }
tauri-plugin-updater = { version = "2" }
tauri-plugin-process = { version = "2" }
serde             = { version = "1",      features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1",      features = ["full"] }

[profile.release]
# Optimise for size — produces a smaller installer
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
